[gd_scene load_steps=10 format=3 uid="uid://cm1wj0vbe4wn8"]

[ext_resource type="Script" path="res://scripts/mechanics/power.gd" id="1_n4h2h"]
[ext_resource type="Script" path="res://scripts/mechanics/shared/movement/follow_body.gd" id="2_7cgiv"]
[ext_resource type="Material" uid="uid://cby3cclkw40gu" path="res://materials/power.tres" id="2_netkk"]
[ext_resource type="Script" path="res://scripts/mechanics/shared/movement/smooth_movement.gd" id="3_gix6h"]

[sub_resource type="SphereMesh" id="SphereMesh_6vkiy"]
material = ExtResource("2_netkk")

[sub_resource type="Animation" id="Animation_41a3g"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_52ggg"]
_data = {
"default": SubResource("Animation_41a3g")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_8p8c6"]
radius = 5.0

[sub_resource type="SphereShape3D" id="SphereShape3D_crqyd"]
radius = 0.1

[node name="Power" type="Node3D" groups=["bullet"]]
script = ExtResource("1_n4h2h")

[node name="FollowBody" type="Node3D" parent="."]
script = ExtResource("2_7cgiv")
max_speed = 3.0
acceleration = 0.5

[node name="SmoothMovement" type="Node3D" parent="."]
script = ExtResource("3_gix6h")
max_speed = 50.0
dampening = 0.0

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
mesh = SubResource("SphereMesh_6vkiy")

[node name="BulletLight" type="OmniLight3D" parent="."]
light_color = Color(0.607843, 1, 1, 1)
light_energy = 0.5
omni_range = 2.0
omni_attenuation = 0.435275

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_52ggg")
}
autoplay = "default"

[node name="PlayerAttractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerAttractionArea"]
shape = SubResource("SphereShape3D_8p8c6")

[node name="PlayerCollisionArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCollisionArea"]
shape = SubResource("SphereShape3D_crqyd")
